# Baghchal-rl

./: .gitignore  README.md  pyproject.toml  quickcheck.py  slow_gif.py
logs/: monitor.monitor.csv  monitor_0.monitor.csv
logs/tb/ppo_5x5_vs_rand_1/: events.out.tfevents.1761797561.exp-4-57.2383713.0
logs/tb/ppo_5x5_vs_rand_2/: events.out.tfevents.1761797664.exp-4-57.2383886.0
logs/tb/ppo_5x5_vs_rand_3/: events.out.tfevents.1761797814.exp-4-57.2384094.0
logs/tb/ppo_5x5_vs_rand_4/: events.out.tfevents.1761797962.exp-4-57.2384292.0
logs/tb/ppo_5x5_vs_rand_5/: events.out.tfevents.1761862014.exp-2-57.356690.0
scripts/: plot_convergence.py  train_baghchal_simple.py  train_maskable_ppo.py  visual_play.py
src/baghchal.egg-info/: PKG-INFO  SOURCES.txt
src/baghchal/rl/: env_baghchal.py  wrappers.py
src/baghchal_5x5.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/baghchal_5x5/rl/: wrappers.py
