[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "baghchal-5x5"
version = "0.0.2"
description = "Minimal BaghChal 5x5 environment with action masking for PPO"
requires-python = ">=3.10"
dependencies = [
  "gymnasium",
  "stable-baselines3",
  "sb3-contrib",
  "numpy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
